added create, read, and delete actions for my prac data

--- a/ng-register/builds/angularregistration/css/style-old.css
+++ b/ng-register/builds/angularregistration/css/style-old.css
@@ -2,9 +2,11 @@
 html {
     box-sizing: border-box;
 }
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
 /* Reset Styles */
 
 html, body, div, span, applet, object, iframe,
@@ -25,41 +27,50 @@ time, mark, audio, video {
     border: 0;
     font: inherit;
     font-size: 100%;
-    vertical-align: baseline; }
+    vertical-align: baseline;
+}
 
 html {
-    line-height: 1; }
+    line-height: 1;
+}
 
 ol, ul {
-    list-style: none; }
+    list-style: none;
+}
 
 table {
     border-collapse: collapse;
-    border-spacing: 0; }
+    border-spacing: 0;
+}
 
 caption, th, td {
     text-align: left;
     font-weight: normal;
-    vertical-align: middle; }
+    vertical-align: middle;
+}
 
 q, blockquote {
-    quotes: none; }
+    quotes: none;
+}
 
 q:before, q:after, blockquote:before, blockquote:after {
     content: "";
-    content: none; }
+    content: none;
+}
 
 a img {
-    border: none; }
+    border: none;
+}
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-    display: block; }
+    display: block;
+}
 
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box; }
-
+    box-sizing: border-box;
+}
 
 /* Base Styles */
 
@@ -79,7 +90,7 @@ html {
     height: auto;
 }
 
-body  {
+body {
     font-family: Lato, 'Helvetica Nueue', Helvetica, Arial, sans-serif;
     font-size: 1rem;
     line-height: 160%;
@@ -100,7 +111,7 @@ body  {
     opacity: .95;
     border-radius: 4px;
     border: 1px solid #e8e8e8;
-    box-shadow: 0 1px 0 rgba(0,0,0,.25);
+    box-shadow: 0 1px 0 rgba(0, 0, 0, .25);
 }
 
 @media all and (max-width: 400px) {
@@ -112,7 +123,7 @@ body  {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', serif;
     font-weight: 100;
-    text-shadow: 1px 1px rgb(255,255,255, 1);
+    text-shadow: 1px 1px rgb(255, 255, 255, 1);
 }
 
 a {
@@ -124,18 +135,18 @@ header {
     margin-bottom: 20px;
 }
 
-h1{
+h1 {
     font-size: 2.2rem;
     font-weight: 400;
     line-height: 100%;
     margin-bottom: 10px;
     padding-top: 10px;
     font-weight: 700;
-    font-family: Lato,appleLogo,sans-serif;
+    font-family: Lato, appleLogo, sans-serif;
     margin: 0 0 1rem;
 }
 
-h2{
+h2 {
     font-weight: 400;
     font-size: 1.5rem;
     line-height: 90%;
@@ -143,10 +154,13 @@ h2{
     margin-top: 10px;
 }
 
-h3{
+h3 {
     margin-top: 0;
     line-height: 110%;
     margin-bottom: 5px;
+}
+
+p {
 }
 
 a.small {
@@ -174,7 +188,6 @@ input[type=radio] {
     width: auto;
 }
 
-
 .ng-enter.ng-enter-active,
 .ng-leave {
     opacity: 1;
@@ -194,6 +207,7 @@ input[type=radio] {
     padding: 12px 24px;
     margin-bottom: 0;
     font-size: 1.3rem;
+    font-weight: 400;
     line-height: 140%;
     text-align: center;
     text-decoration: none;
@@ -217,20 +231,43 @@ input[type=radio] {
     user-select: none;
 }
 
-
-.btn .btn-left { float: left; }
-.btn .btn-right { float: right; }
-.btn:focus, .btn:hover {
-    background-color: #DC322F;
-    outline: none;
+.btn .btn-left {
+    float: left;
 }
 
-.btn-list { background-image: url(../images/icons/icon_list.png); }
-.btn-checkin { background-color: #859835; background-image: url(../images/icons/icon_checkmark.png); }
-.btn-delete { background-color: #C94C24; background-image: url(../images/icons/icon_trash.png); }
-.btn-love { background-image: url(../images/icons/icon_heart.png); }
-.btn-email { background-image: url(../images/icons/icon_email.png); }
-.btn-meeting { background-image:  url(../images/icons/icon_meeting.png); }
+.btn .btn-right {
+    float: right;
+}
+
+.btn:hover {
+    background-color: #DC322F;
+}
+
+.btn-list {
+    background-image: url(../images/icons/icon_list.png);
+}
+
+.btn-checkin {
+    background-color: #859835;
+    background-image: url(../images/icons/icon_checkmark.png);
+}
+
+.btn-delete {
+    background-color: #C94C24;
+    background-image: url(../images/icons/icon_trash.png);
+}
+
+.btn-love {
+    background-image: url(../images/icons/icon_heart.png);
+}
+
+.btn-email {
+    background-image: url(../images/icons/icon_email.png);
+}
+
+.btn-meeting {
+    background-image: url(../images/icons/icon_meeting.png);
+}
 
 .btn-pick {
     background: #2D8BCF url(../images/icons/icon_dice.png) 5px center no-repeat;
@@ -241,19 +278,9 @@ input[type=radio] {
 }
 
 .btn-reset {
-    background: #CB4B19 url(../images/icons/icon_reset.png)  5px center no-repeat;
+    background: #CB4B19 url(../images/icons/icon_reset.png) 5px center no-repeat;
     background-size: 20px 20px;
     padding: 5px 5px 5px 50px;
-}
-
-.showcheckins input {
-    width: 80%;
-}
-
-.showcheckins .btn {
-    margin: 0 3px;
-    width: 15%;
-    padding: 8px !important;
 }
 
 /*buttons*/
@@ -289,8 +316,8 @@ fieldset {
     font-size: 1rem;
     padding: 10px 0 10px 15px;
     color: #475B62;
-    background: rgba(255,255,255,0.4);
-    border: 1px solid rgba(0,0,0,0.3);
+    background: rgba(255, 255, 255, 0.4);
+    border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .search input[type="text"] {
@@ -386,7 +413,6 @@ fieldset {
     width: 80%;
 }
 
-
 .userlist li.expanded .btn-love {
     background-color: #C61C6F;
 }
@@ -409,13 +435,13 @@ fieldset {
         width: 100%;
     }
 
-    .userlist  .info  {
+    .userlist .info {
         width: 70%;
     }
 }
 
 ul.awardslist {
-    margin-top:5px;
+    margin-top: 5px;
 }
 
 ul.awardslist li {
@@ -437,7 +463,7 @@ ul.awardslist li .btn-delete {
     background-color: transparent;
     background-size: 15px 15px;
     background-position: center 40%;
-    margin:0;
+    margin: 0;
     border: none;
 }
 
@@ -448,7 +474,7 @@ ul.awardslist li .award {
 nav {
     width: 100%;
     background: #fff;
-    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
 }
 
 .branding {
@@ -468,7 +494,6 @@ nav {
 .branding a:hover {
     color: none;
 }
-
 
 nav ul {
     width: 60%;
@@ -520,11 +545,11 @@ nav li a:hover {
 }
 
 .addmeeting {
-    width:100%;
+    width: 100%;
 }
 
 .addmeeting .inputwrapper {
-    margin-right:80px;
+    margin-right: 80px;
 }
 
 .addmeeting .inputwrapper input {
@@ -553,7 +578,6 @@ nav li a:hover {
     border-radius: 4px;
     border: 1px solid #C5C5C5;
 
-
 }
 
 .meetings .meeting .btn {
@@ -566,7 +590,7 @@ nav li a:hover {
     vertical-align: bottom;
 }
 
-.meetings .meeting .text a{
+.meetings .meeting .text a {
     text-decoration: none;
 }
 
@@ -611,36 +635,27 @@ nav li a:hover {
     transform: translateY(0px);
 }
 
-.badge {
-    display: inline-block;
-    min-width: 10px;
-    padding: 3px 7px;
-    font-size: 12px;
-    font-weight: bold;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    background-color: #777;
-    border-radius: 10px;
-}
-.badge:empty {
-    display: none;
+.checkinslist {
+    margin-top: 20px;
 }
 
-.checkinslist { margin-top: 20px; }
-.checkinslist h1 { color: #2D8BCF; }
+.checkinslist h1 {
+    color: #2D8BCF;
+}
+
 .checkin h2 {
     margin: 0;
     padding: 0;
 }
+
 .checkin .btn {
     padding: 0;
     margin: 0 3px;
 }
 
-.checkinslist h3 { color: #657B83; }
+.checkinslist h3 {
+    color: #657B83;
+}
 
 input.ng-invalid.ng-touched {
     border: 1px solid #DA3637;
@@ -662,5 +677,3 @@ input.ng-valid.ng-touched {
 .message {
     color: indianred;
 }
-
-
