--- a/ng-register/builds/angularregistration/views/nav.html
+++ b/ng-register/builds/angularregistration/views/nav.html
@@ -3,5 +3,6 @@
 	<ul>
 		<li><a ng-hide="currentUser" ng-href="#/login">Login</a></li>
 		<li><a ng-hide="currentUser" ng-href="#/register">Register</a></li>
+		<li><a ng-show="currentUser" ng-href="#/meetings">Meetings</a></li>
 	</ul>
 </div>
