just refreshing my memory for ng directive development :)

--- a/ng-register/builds/angularregistration/css/style.css
+++ b/ng-register/builds/angularregistration/css/style.css
@@ -88,6 +88,14 @@ body  {
     *zoom: 1;
 }
 
+.j-text-center {
+    text-align: center;
+}
+
+.j-padding {
+    padding: 16px;
+}
+
 .card {
     background: white;
     width: 100%;
