--- a/ng-register/builds/angularregistration/views/register.html
+++ b/ng-register/builds/angularregistration/views/register.html
@@ -20,7 +20,8 @@
 			       ng-model="user.lastname" ng-required="true">
 			<p class="error validationerror"
 			   ng-show="myform.lastname.$invalid && myform.lastname.$touched">
-				Last name required</p>
+				Last name required
+			</p>
 			
 			<input type="email" name="email" placeholder="Email"
 			       ng-model="user.email" ng-required="true">
