practicing scope inheritence

--- a/ng-register/builds/angularregistration/views/view.home.html
+++ b/ng-register/builds/angularregistration/views/view.home.html
@@ -4,9 +4,9 @@
 	<h2>user: {{homeTitle}}</h2>
 	<p>{{regCtrlTitle}}</p>
 	
-	.
-	
 	<br>
 	
-	<ja-user-info-card></ja-user-info-card>
+	<ja-user-info-card user="user1"></ja-user-info-card>
+	
+	<ja-user-info-card user="user2"></ja-user-info-card>
 </section>
