--- a/ng-register/builds/angularregistration/views/view.home.html
+++ b/ng-register/builds/angularregistration/views/view.home.html
@@ -9,4 +9,6 @@
 	<ja-user-info-card user="user1"></ja-user-info-card>
 	
 	<ja-user-info-card user="user2"></ja-user-info-card>
+	
+	<ja-user-info-card user="user3"></ja-user-info-card>
 </section>
