added a simple pause to video

--- a/ng-register/builds/angularregistration/views/view.home.html
+++ b/ng-register/builds/angularregistration/views/view.home.html
@@ -3,12 +3,20 @@
 	<h1>Welcome to the App!</h1>
 	<h2>user: {{homeTitle}}</h2>
 	<p>{{regCtrlTitle}}</p>
+	<hr>
+	<div class="card">
+		<video id="vid" controls ja-space-bar-support preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png" width="100%">
+			<source src="http://media.w3.org/2010/05/sintel/trailer_hd.mp4" type="video/mp4">
+		</video>
+	</div>
 	
-	<br>
-	
+	<hr>
+	<h1>User Cards</h1>
 	<ja-user-info-card user="user1" collapsed="false"></ja-user-info-card>
 	
 	<ja-user-info-card user="user2" collapsed="true"></ja-user-info-card>
 	
 	<ja-user-info-card user="user3" collapsed="false"></ja-user-info-card>
+	
+	
 </section>
